--- a/libs/shared/frontend/components/src/lib/pd-input/pd-input.component.html
+++ b/libs/shared/frontend/components/src/lib/pd-input/pd-input.component.html
@@ -1,7 +1,17 @@
-<!-- From Uiverse.io by alexruix --> 
-<div class="input-group">
-    
-    <input required="" type="text" name="text" autocomplete="off" class="input">
+<!-- From Uiverse.io by alexruix "input-group" --> 
+<div 
+
+class="input-group"
+>
+
+    <input 
+    required="" 
+    type="text" 
+    name="text" 
+    autocomplete="off" 
+    class="pd-input-textbox"
+    [ngClass]='getClassObject()'
+    >
 
     <label for class="user-label">First Name</label>
 
