--- a/libs/shared/frontend/components/src/lib/pd-input/pd-input.component.scss
+++ b/libs/shared/frontend/components/src/lib/pd-input/pd-input.component.scss
@@ -2,7 +2,7 @@
 .input-group {
     position: relative;
    }
-   
+   /*
    .input {
     border: solid 1.5px #9e9e9e;
     border-radius: 1rem;
@@ -12,20 +12,22 @@
     color: #f5f5f5;
     transition: border 150ms cubic-bezier(0.4,0,0.2,1);
    }
-   
+   */
    .user-label {
     position: absolute;
     left: 15px;
-    color: #e8e8e8;
+    color: #7c7c7c;
     pointer-events: none;
     transform: translateY(1rem);
     transition: 150ms cubic-bezier(0.4,0,0.2,1);
    }
    
+   /*
    .input:focus, input:valid {
     outline: none;
     border: 1.5px solid #1a73e8;
    }
+    */
    
    .input:focus ~ label, input:valid ~ label {
     transform: translateY(-50%) scale(0.8);
@@ -34,6 +36,39 @@
     color: #2196f3;
    }
 
-.pd-input-textbox input{
-    
+   //this mean that when the input is focused or valid, the label will be moved up and scaled to 0.8
+   .pd-input-textbox:focus ~ label, pd-input-textbox:valid ~ label {
+    transform: translateY(-50%) scale(0.8);
+    background-color: #ffffff;
+    padding: 0 .2em;
+    color: #2196f3;
+   }
+
+
+//This is the text input box
+.pd-input-textbox{
+    //here the coomon config
+    position: relative;
+    width: 100%;
+    border-radius: 1rem;
+    padding: 1rem;
+    font-size: 1rem;
+    transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+    &.standard {
+        border: solid 1.5px #9e9e9e;
+        background: none;
+        color: #313131; //This is the color of the text you write
+        //placeholderm, focus, error, disabled
+        &::placeholder{
+            color: #9e9e9e;
+        }	
+        &:focus, &.valid{
+            outline: none;
+            border: 1.5px solid #1a73e8;
+        }
+        
+
+    }
+
+    //other modes
 }
