--- a/apps/pd-book-frontend/src/app/app.component.scss
+++ b/apps/pd-book-frontend/src/app/app.component.scss
@@ -2,4 +2,17 @@
     margin-top: 20px;
     display: flex;
     justify-content: center;
+    gap: 32px;
+    width: 100%;
+    flex-direction: column;
+}
+
+.form-container {
+    margin-left: 20%;
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    width: 50%;
+    flex-direction: column;
+    align-items: start;
 }
